--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "James Tuckett <james@tuckett.me>",
   "version": "1.0.0",
   "scripts": {
+    "storybook": "start-storybook",
     "dev": "next",
     "build": "next build",
     "start": "next start"
@@ -15,10 +16,13 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@storybook/react": "^5.2.6",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "4.1.16",
+    "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "typescript": "3.5.2"
   },
