--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "storybook": "start-storybook",
     "dev": "next",
+    "test": "jest",
     "build": "next build",
     "start": "next start"
   },
@@ -17,13 +18,27 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@storybook/addon-info": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "^24.0.23",
+    "@types/next": "^9.0.0",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "4.1.16",
+    "@zeit/next-typescript": "^1.1.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
+    "babel-preset-react-app": "^9.0.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "fork-ts-checker-webpack-plugin": "^3.1.0",
+    "jest": "^24.9.0",
+    "react-docgen-typescript-loader": "^3.4.0",
+    "ts-jest": "^24.1.0",
     "typescript": "3.5.2"
   },
   "license": "ISC"
