--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next",
     "test": "jest",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "yarn build && next export"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
