--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^9.3.2",
     "@types/rebass": "^4.0.3",
     "dotenv": "^8.2.0",
+    "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.19",
     "next": "latest",
     "next-images": "^1.2.0",
