--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     "public",
     "typings"
   ],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/connect.js"]
 }
