--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build-storybook": "build-storybook -c .storybook",
     "storybook": "start-storybook",
-    "dev": "next",
+    "dev": "next -p 8080",
     "test": "jest",
     "build": "next build",
     "start": "next start",
