--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     "public",
     "typings"
   ],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/connect.js"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/connect.js", "styles/text-variants.js", "styles/general-variants.js", "styles/button-variants.js", "styles/theme.js"]
 }
