--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "typeRoots": [ "./typings", "./node_modules/@types"],
     "target": "esnext",
     "module": "esnext",
     "jsx": "preserve",
     "lib": ["dom", "es2017"],
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "allowJs": true,
     "noEmit": true,
     "strict": true,
@@ -16,7 +18,6 @@
     "removeComments": false,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true
@@ -28,8 +29,7 @@
     ".vscode",
     "out",
     "storybook-static",
-    "public",
-    "typings"
+    "public"
   ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/connect.js", "styles/text-variants.js", "styles/general-variants.js", "styles/button-variants.js", "styles/theme.js"]
 }
