--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@rebass/forms": "^4.0.6",
     "@rebass/preset": "^4.0.5",
     "@testing-library/react": "^9.3.2",
+    "@types/lodash.uniqby": "^4.7.6",
     "@types/rebass": "^4.0.3",
     "dotenv": "^8.2.0",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.19",
+    "lodash.uniqby": "^4.7.0",
     "next": "latest",
     "next-images": "^1.2.0",
     "react": "16.8.6",
