--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "lodash.uniqby": "^4.7.0",
     "next": "latest",
     "next-images": "^1.2.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "react": "16.9.0-alpha.0",
+    "react-dom": "16.9.0-alpha.0",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
@@ -49,8 +49,10 @@
     "babel-preset-react-app": "^9.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
     "jest": "^24.9.0",
+    "jest-serial-runner": "^1.1.0",
     "react-docgen-typescript-loader": "^3.4.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
+    "react-test-renderer": "16.9.0-alpha.0",
     "ts-jest": "^24.1.0",
     "typescript": "3.5.2"
   },
