--- a/package.json
+++ b/package.json
@@ -17,23 +17,28 @@
     "@makerdao/dai-plugin-mcd": "^1.0.1",
     "@rebass/forms": "^4.0.6",
     "@rebass/preset": "^4.0.5",
+    "@storybook/addon-docs": "^5.2.6",
     "@testing-library/react": "^9.3.2",
     "@types/lodash.uniqby": "^4.7.6",
+    "@types/marked": "^0.7.2",
     "@types/rebass": "^4.0.3",
     "dotenv": "^8.2.0",
     "emotion-normalize": "^10.1.0",
     "emotion-theming": "^10.0.19",
     "lodash.uniqby": "^4.7.0",
+    "marked": "^0.7.0",
     "next": "latest",
     "next-images": "^1.2.0",
-    "react": "16.9.0-alpha.0",
+    "react": "^16.12.0",
     "react-dom": "16.9.0-alpha.0",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@storybook/addon-a11y": "^5.2.6",
-    "@storybook/addon-info": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-options": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
     "@storybook/react": "^5.2.6",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.23",
