--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@storybook/addon-a11y": "^5.2.6",
+    "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
     "@storybook/addon-options": "^5.2.6",
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/react": "^5.2.6",
