VM-017 - Printing out env variables to test whether they're in the process

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,7 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run:
+          name: "What are my custom variables?"
+          command: echo ${NETWORK} ${PROVIDER}
       - run: yarn test
