--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-docgen-typescript-loader": "^3.4.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-test-renderer": "16.9.0-alpha.0",
+    "storybook-chromatic": "^3.1.0",
     "ts-jest": "^24.1.0",
     "typescript": "3.5.2"
   },
