--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,12 @@ jobs:
     docker:
       - image: circleci/node:10.17-buster-browsers-legacy
     working_directory: ~/repo
+    web:
+      environment:
+        - NETWORK
+        - PROVIDER
+        - URL
+        - PRIVATE_KEY
     steps:
       - checkout
       - restore_cache:
@@ -19,3 +25,4 @@ jobs:
           name: "What are my custom variables?"
           command: echo ${NETWORK} ${PROVIDER}
       - run: yarn test
+      - run: yarn chromatic test --app-code=<app-code> --exit-zero-on-changes
