VM-002 - Fixing storybook so it loads svgs for header component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
+  "files": [
+    "typings/custom.d.ts"
+  ,],
   "exclude": [
     "node_modules",
     "__mocks__",
@@ -31,5 +34,5 @@
     "storybook-static",
     "public"
   ],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/connect.js", "styles/text-variants.js", "styles/general-variants.js", "styles/button-variants.js", "styles/theme.js", "jest.setup.js"]
+  "include": ["next-env.d.ts", "./typings", "**/*.ts", "**/*.tsx", "utils/connect.js", "styles/text-variants.js", "styles/general-variants.js", "styles/button-variants.js", "styles/theme.js", "jest.setup.js"]
 }
