--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "marked": "^0.7.0",
     "next": "latest",
     "next-images": "^1.2.0",
+    "raw-loader": "^3.1.0",
     "react": "^16.12.0",
     "react-dom": "16.9.0-alpha.0",
     "rebass": "^4.0.7"
@@ -44,6 +45,7 @@
     "@storybook/addon-options": "^5.2.6",
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "@svgr/webpack": "^4.3.3",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
@@ -56,15 +58,19 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-preset-react-app": "^9.0.2",
+    "file-loader": "^4.3.0",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
     "jest-serial-runner": "^1.1.0",
     "react-docgen-typescript-loader": "^3.4.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "react-test-renderer": "16.9.0-alpha.0",
     "storybook-chromatic": "^3.1.0",
+    "svg-react-loader": "^0.4.6",
     "ts-jest": "^24.1.0",
-    "typescript": "3.5.2"
+    "typescript": "3.5.2",
+    "url-loader": "^2.3.0"
   },
   "resolutions": {
     "@types/react": "^16.8.23"
