--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-react-jsx": "^7.7.4",
+    "@mdx-js/loader": "^1.5.1",
+    "@next/mdx": "^9.1.4",
     "@storybook/addon-a11y": "^5.2.6",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
@@ -57,6 +60,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-typescript-to-proptypes": "^1.1.0",
     "babel-preset-react-app": "^9.0.2",
     "file-loader": "^4.3.0",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
