--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "next-images": "^1.2.0",
     "raw-loader": "^3.1.0",
     "react": "^16.12.0",
-    "react-dom": "16.9.0-alpha.0",
+    "react-dom": "16.12.0",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
@@ -49,6 +49,7 @@
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/react": "^5.2.6",
     "@svgr/webpack": "^4.3.3",
+    "@testing-library/dom": "^6.10.1",
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
@@ -69,7 +70,7 @@
     "jest-serial-runner": "^1.1.0",
     "react-docgen-typescript-loader": "^3.4.0",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "react-test-renderer": "16.9.0-alpha.0",
+    "react-test-renderer": "16.12.0",
     "storybook-chromatic": "^3.1.0",
     "svg-react-loader": "^0.4.6",
     "ts-jest": "^24.1.0",
