VM-005 - Setup linting and prettier and git hook

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build-storybook": "build-storybook -c .storybook",
     "chromatic": "CHROMATIC_APP_CODE=fyfw94kk8u chromatic",
     "storybook": "start-storybook",
+    "lint": "tslint './components/**/*.{ts,tsx,js}'",
     "dev": "next -p 8080",
     "test": "jest",
     "build": "next build",
@@ -18,7 +19,6 @@
     "@makerdao/dai": "^0.22.0",
     "@makerdao/dai-plugin-mcd": "^1.0.1",
     "@rebass/forms": "^4.0.6",
-    "@rebass/preset": "^4.0.5",
     "@storybook/addon-docs": "^5.2.6",
     "@testing-library/react": "^9.3.2",
     "@types/lodash.uniqby": "^4.7.6",
@@ -31,51 +31,39 @@
     "marked": "^0.7.0",
     "next": "latest",
     "next-images": "^1.2.0",
-    "raw-loader": "^3.1.0",
     "react": "^16.12.0",
     "react-dom": "16.12.0",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
-    "@babel/plugin-transform-react-jsx": "^7.7.4",
     "@mdx-js/loader": "^1.5.1",
     "@next/mdx": "^9.1.4",
     "@storybook/addon-a11y": "^5.2.6",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
-    "@storybook/addon-options": "^5.2.6",
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/react": "^5.2.6",
-    "@svgr/webpack": "^4.3.3",
-    "@testing-library/dom": "^6.10.1",
-    "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
-    "@types/node": "12.0.12",
     "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
     "@types/storybook__react": "^4.0.2",
     "@zeit/next-typescript": "^1.1.1",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.0",
-    "babel-plugin-typescript-to-proptypes": "^1.1.0",
-    "babel-preset-react-app": "^9.0.2",
-    "file-loader": "^4.3.0",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
-    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
     "jest-serial-runner": "^1.1.0",
+    "prettier": "^1.19.1",
     "react-docgen-typescript-loader": "^3.4.0",
-    "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "react-test-renderer": "16.12.0",
     "storybook-chromatic": "^3.1.0",
-    "svg-react-loader": "^0.4.6",
     "ts-jest": "^24.1.0",
-    "typescript": "3.5.2",
-    "url-loader": "^2.3.0"
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.1.0",
+    "typescript": "3.5.2"
   },
   "resolutions": {
     "@types/react": "^16.8.23"
