--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "jest": {},
   "dependencies": {
+    "@storybook/addon-a11y": "^5.2.6",
+    "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
+    "@emotion/core": "^10.0.22",
     "@makerdao/dai": "^0.22.0",
     "@makerdao/dai-plugin-mcd": "^1.0.1",
     "@rebass/forms": "^4.0.6",
@@ -39,11 +45,6 @@
     "@babel/core": "^7.7.2",
     "@mdx-js/loader": "^1.5.1",
     "@next/mdx": "^9.1.4",
-    "@storybook/addon-a11y": "^5.2.6",
-    "@storybook/addon-actions": "^5.2.6",
-    "@storybook/addon-knobs": "^5.2.6",
-    "@storybook/addon-links": "^5.2.6",
-    "@storybook/addon-storysource": "^5.2.6",
     "@storybook/react": "^5.2.6",
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
