--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,5 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-      - run:
-          name: "What are my custom variables?"
-          command: echo ${NETWORK} ${PROVIDER}
       - run: yarn test
-      - run: yarn chromatic test --app-code=<app-code> --exit-zero-on-changes
+      - run: yarn chromatic --exit-zero-on-changes
