--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mcd-vault-manager",
+  "name": "vault-maker",
   "author": "James Tuckett <james@tuckett.me>",
   "version": "1.0.0",
   "typings": "typings",
@@ -16,16 +16,17 @@
   },
   "jest": {},
   "dependencies": {
-    "@storybook/addon-a11y": "^5.2.6",
-    "@storybook/addon-actions": "^5.2.6",
-    "@storybook/addon-knobs": "^5.2.6",
-    "@storybook/addon-links": "^5.2.6",
-    "@storybook/addon-storysource": "^5.2.6",
+    "@backtothecode/vault-maker-ui": "^0.2.3",
     "@emotion/core": "^10.0.22",
     "@makerdao/dai": "^0.22.0",
     "@makerdao/dai-plugin-mcd": "^1.0.1",
     "@rebass/forms": "^4.0.6",
+    "@storybook/addon-a11y": "^5.2.6",
+    "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-docs": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-links": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
     "@testing-library/react": "^9.3.2",
     "@types/lodash.uniqby": "^4.7.6",
     "@types/marked": "^0.7.2",
@@ -35,7 +36,7 @@
     "emotion-theming": "^10.0.19",
     "lodash.uniqby": "^4.7.0",
     "marked": "^0.7.0",
-    "next": "latest",
+    "next": "^9.1.4",
     "next-images": "^1.2.0",
     "react": "^16.12.0",
     "react-dom": "16.12.0",
@@ -48,7 +49,7 @@
     "@storybook/react": "^5.2.6",
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
-    "@types/react": "16.8.23",
+    "@types/react": "^16.8.23",
     "@types/storybook__react": "^4.0.2",
     "@zeit/next-typescript": "^1.1.1",
     "babel-loader": "^8.0.6",
