--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "jest": {},
   "dependencies": {
-    "@backtothecode/vault-maker-ui": "^0.2.3",
+    "@backtothecode/vault-maker-ui": "^0.5.3",
     "@emotion/core": "^10.0.22",
     "@makerdao/dai": "^0.22.0",
     "@makerdao/dai-plugin-mcd": "^1.0.1",
@@ -38,6 +38,7 @@
     "marked": "^0.7.0",
     "next": "^9.1.4",
     "next-images": "^1.2.0",
+    "next-transpile-modules": "^2.3.1",
     "react": "^16.12.0",
     "react-dom": "16.12.0",
     "rebass": "^4.0.7"
