--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@backtothecode/vm-ui-library",
-  "version": "0.1.5",
+  "version": "0.1.6-0",
   "description": "",
   "main": "./dist/umd/vault-maker.min.js",
   "module": "/dist/es2015/index.js",
